--- a/components/LongOperations/LongOperationsPopup/resources/headerTemplate.xhtml
+++ b/components/LongOperations/LongOperationsPopup/resources/headerTemplate.xhtml
@@ -12,6 +12,6 @@
    <option name="caption">Скачать</option>
 </component>
 <div class="controls-LongOperationsPopup__header_stoppedOperationsButton controls-LongOperationsPopup__header_stoppedOperations-show">
-   <span class="controls-LongOperationsPopup__header_hideStoppedOperations">Скрыть приостанов.</span>
-   <span class="controls-LongOperationsPopup__header_showStoppedOperations">Вернуть приостанов.</span>
+   <span class="controls-LongOperationsPopup__header_hideStoppedOperations" title="Скрыть приостановленные">Скрыть приост.</span>
+   <span class="controls-LongOperationsPopup__header_showStoppedOperations" title="Вернуть приостановленные">Вернуть приост.</span>
 </div>
