--- a/themes/presto/variables.less
+++ b/themes/presto/variables.less
@@ -979,6 +979,7 @@
 @long-operations-list-group-title-color: #ffffff;
 @long-operations-list-time-ctr-f-size: 16px;
 @long-operations-popup-collapsed-width: 420px;
+@long-operations-popup-collapsed-max-width: 420px;
 @long-operations-popup-exp-width: 600px;
 @long-operations-popup-exp-max-width: 600px;
 @long-operations-popup-header-height: 60px;
