--- a/themes/typography.less
+++ b/themes/typography.less
@@ -1,48 +1,48 @@
 .controls-default-text-size {
-	font-size: @default-text-size;
+	font-size: @default-text-size !important;
 }
 .controls-small-text-size {
-	font-size: @small-text-size;
+	font-size: @small-text-size !important;
 }
 .controls-large-text-size {
-	font-size: @large-text-size
+	font-size: @large-text-size !important;
 }
 .controls-huge-text-size {
-	font-size: @huge-text-size
+	font-size: @huge-text-size !important
 }
 .controls-bold-text {
-	font-weight: bold;
+	font-weight: bold !important;
 }
 .controls-error-color {
-	color: @error-color;
+	color: @error-color !important;
 }
 .controls-success-color {
-	color: @success-color;
+	color: @success-color !important;
 }
 .controls-warning-text {
-	color: @warning-color;
+	color: @warning-color !important;
 }
 .controls-primary-text {
-	color: @primary-color;
+	color: @primary-color !important;
 }
 .controls-accent-text {
-	color: @accent-color;
+	color: @accent-color !important;
 }
 .controls-default-text {
-	color: @default-text-color;
+	color: @default-text-color !important;
 }
 .controls-disabled-text {
-	color: @disabled-color;
+	color: @disabled-color !important;
 }
 .controls-hover-text {
-	color: @default-hover-color;
+	color: @default-hover-color !important;
 }
 .controls-innacent-text {
-	color: @innacent-color;
+	color: @innacent-color !important;
 }
 .controls-default-bg {
-	background-color: @default-bg-color;
+	background-color: @default-bg-color !important;
 }
 .controls-block-bg {
-	background-color: @basic-block-bg-color;
+	background-color: @basic-block-bg-color !important;
 }
