https://online.sbis.ru/opendoc.html?guid=fd1521f9-287c-4662-8db5-2b4a46b37551&des= Ошибка в разработку 04.07.2017 test-online.sbis.ru 3.7.5.150 - 217 браузер Mozilla Firefox и Internet Explorer Размер точек в поле …

--- a/themes/carry/theme.less
+++ b/themes/carry/theme.less
@@ -251,6 +251,9 @@
          .controls-TextBox__field {
             font-size: @text-box-height-carryFont;
          }
+         .controls-TextBox__field__fixIE {
+          font-size: 28px;
+         }
       }
    }
 }
