--- a/tests/WSTest/Focus/Case12.tmpl
+++ b/tests/WSTest/Focus/Case12.tmpl
@@ -1,9 +1,11 @@
 <div>
-   <ws:SBIS3.CONTROLS.Panel id="AA1" name="AreaAbstract1">
+   <ws:SBIS3.CONTROLS.Panel name="AreaAbstract1" class="AA1">
       <ws:content>
-         <ws:SBIS3.CONTROLS.Panel name="AreaAbstract2" class="case11">
-            <ws:SBIS3.CONTROLS.TextBox id="move" name="TextBox0"/>
-            <ws:SBIS3.CONTROLS.TextBox name="TextBox1"/>
+         <ws:SBIS3.CONTROLS.Panel name="AreaAbstract2" class="AA2">
+            <ws:content>
+               <ws:SBIS3.CONTROLS.TextBox name="TextBox0" class="moveTb"/>
+               <ws:SBIS3.CONTROLS.TextBox name="TextBox1"/>
+            </ws:content>
          </ws:SBIS3.CONTROLS.Panel>
       </ws:content>
    </ws:SBIS3.CONTROLS.Panel>
