https://online.sbis.ru/opendoc.html?guid=d1834086-323f-4aef-a42a-19e614aed254&des= Ошибка в разработку 17.07.2017 Появилась серая полоса внизу выпадающего списка в фильтре Престо. Зайти в Престо/ Перейти на разводя…

--- a/themes/carrynew/theme.less
+++ b/themes/carrynew/theme.less
@@ -174,3 +174,6 @@ body .ws-window {
       }
   }
 }
+.controls-ComboBox__picker .controls-ComboBox__scrollContainer {
+    background: transparent;
+}
