fix carry ie top https://online.sbis.ru/opendoc.html?guid=719f00c5-dcdd-4368-9348-f3206e4942aa&des= Merge request 18.07.2017 Регламент: Ошибка в разработку. Автор: Оборевич К.А.Описание: IE. Розница online-inside_3.7.5.150 (v…

--- a/themes/carry/theme.less
+++ b/themes/carry/theme.less
@@ -446,6 +446,15 @@
        top: 0;
    }
 }
+
+.ws-is-ie {
+   .engine-Browser__path-wrapper {
+      .controls-Browser__breadCrumbs {
+         top: 3px;
+      }
+   }
+}
+
 .controls-BreadCrumbs {
    .controls-BreadCrumbs__itemsContainer{
       vertical-align: top;
