https://online.sbis.ru/opendoc.html?guid=230cf52b-78ec-4d6a-a47a-edcb6c89fb40&des= Ошибка в разработку 14.06.2017 Редизайн. Маленький отступ внутри блоков на разводящей отчетов Presto ФР: 6 (см скрин 01, 02) О…

--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -560,6 +560,7 @@
 @edit-at-place-editor-overlay-border-radius:.1071rem;
 @edit-at-place-editor-overlay-bg:         darken(@secondary-color, 5%) !important;
 //List view
+@controls-view-padding-S:                 .3333rem;
 @list-view-min-height:                    8rem;
 @listView-servicefooter-height:           1.47rem;
 @listView-servicefooter-padding:          0 0.8rem;
