https://online.sbis.ru/opendoc.html?guid=96401f70-1b77-4040-8b29-384052fb7fbd&des= Ошибка в разработку 30.06.2017 Редизайн. Интерфейсные замечания переключателя схемы залы в настройках Presto 1. 2. настройки - о…

--- a/themes/carrynew/variables.less
+++ b/themes/carrynew/variables.less
@@ -73,7 +73,7 @@
 @switcher-do-text-color:                  @black-color;
 @switcher-do-unselected-text-color:       #8991A9;
 @switcher-do-disabled-text-color:         @gray-ccc-color;
-@switcher-btn-bg-color-disabled:          @gray-ccc-color;
+@switcher-btn-bg-color-disabled:          white;
 @switcher-do-disabled-btn-background:     @gray-ccc-color;
 @switcher-do-horizontal-line-background-color:@innacent-color;
 @switcher-do-disabled-line-color:         @gray-ccc-color;
