--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -219,7 +219,7 @@
 @switcher-btn-margin:							.357rem;
 @switcher-border-radius:						1rem;
 @switcher-btn-color:                      @primary-color;
-@switcher-btn-bg-color-disabled:          @gray-color;
+@switcher-btn-bg-color-disabled:          @basic-block-bg-color;
 @switcher-do-horizontal-line-background-color:@disabled-color;
 @switcher-do-text-color:                  @white-color;
 @switcher-do-unselected-text-color:       @disabled-color;
