LongOperations: Изменено отображение ошибки в истории

--- a/components/LongOperations/LongOperationHistory/LongOperationHistory.less
+++ b/components/LongOperations/LongOperationHistory/LongOperationHistory.less
@@ -15,6 +15,10 @@
     margin-bottom: 12px;
 }
 
+.controls-LongOperationHistory .controls-DataGridView__tr .controls-DataGridView__td .controls-DataGridView__columnValue {
+    white-space: normal;
+}
+
 /*Это вероятно лишнее, но пока так*/
 
 .controls-LongOperationHistory .controls-Browser {
