--- a/components/LongOperations/LongOperationHistory/LongOperationHistory.xhtml
+++ b/components/LongOperations/LongOperationHistory/LongOperationHistory.xhtml
@@ -49,12 +49,12 @@
                   <opts>
                      <opt name="title" value="{[ОперацииНадЗаписями@@Наименование]}"/>
                      <opt name="field" value="title"/>
-                     <opt name="width" value="100%"/>
+                     <!--<opt name="width" value="100%"/>-->
                   </opts>
                   <opts>
                      <opt name="title" value="Статус"/>
                      <opt name="cellTemplate" value="html!SBIS3.CONTROLS.LongOperationHistory/resources/LongOperationHistoryStatusTemplate"/>
-                     <opt name="width" value="200"/>
+                     <!--<opt name="width" value="200"/>-->
                   </opts>
                </opts>
                <opts name="ladder" type="array">
