https://online.sbis.ru/opendoc.html?guid=7f047ec5-9a57-4568-bff3-a91e2b5940af&des= Ошибка в разработку 17.07.2017 Розница Онлайн. Едет верстка фильтра по сменам online-inside_3.17.20 (ver 3.17.20) - 128 (17.07.2017…

--- a/components/FilterButton/FilterButtonArea/FilterButtonArea.less
+++ b/components/FilterButton/FilterButtonArea/FilterButtonArea.less
@@ -5,7 +5,7 @@
 	margin-top: -1px;
 
 	.controls-PopupMixin__closeButton {
-		top: 12px;
+		top: @controls-filterButton-picker-close-top;
 	}
 	
 	.blue-color {
