--- a/themes/carry/variables.less
+++ b/themes/carry/variables.less
@@ -394,6 +394,7 @@
 @controls-filterButton-apply-margin-right:      30px;
 @controls-filterLine-link-hover-color:          @controls-filterLine-link-color;
 @controls-filterButton-button-height:           40px;
+@controls-filterButton-picker-close-top:        24px;
 @controls-filterLine-wrapper-height:            @controls-filterButton-button-height;
 @controls-filterLine-items-line-height:         40px;
 
