--- a/themes/online/variables.less
+++ b/themes/online/variables.less
@@ -2204,6 +2204,7 @@
 @controls-filterButton-picker-border-color:       @gray-ccc-color;
 @controls-filterButton-picker-border-radius:      0;
 @controls-filterButton-picker-margin-top:         -1px;
+@controls-filterButton-picker-close-top:          12px;
 @controls-Popup-closeButton-top:                  10px;
 @controls-Popup-closeButton-right:                0;
 
