--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -697,6 +697,7 @@
 @controls-filterButton-picker-bg:         #38495B;
 @controls-filterButton-picker-border-width:@default-border-width;
 @controls-Popup-closeButton-top:          1.75rem;
+@controls-filterButton-picker-close-top:  .29rem;
 @controls-filterButton-button-margin:     0;
 @controls-filterButton-button-margin-right-align:.2857rem 0 .2857rem .2857rem;
 @controls-filterButton-button-margin-ff:  .5714rem 0 0 0;
