В ie и ff баг с flex-direction: column-reverse: С overflow: hidden скролл на контейнере не появляется Убрал flex с основного контейнера, меню перемещаю через изменение положения узла в dom-дереве
https://online.sbis.ru/opendoc.html?guid=ee0f1b09-7962-4681-bc8b-2878e30142cd&des=
Ошибка в разработку 20.06.2017 FF, IE. Задачи. Нет скролла в менюшке Прикрепить в задаче Как повторить: Задачи - +Задача - в поле о…

--- a/components/Menu/Menu.less
+++ b/components/Menu/Menu.less
@@ -173,3 +173,17 @@
       }
    }
 }
+
+.ws-is-firefox, .ws-is-ie {
+   .controls-Menu__Popup {
+      display: block;
+      &.controls-popup-revert-vertical {
+         .controls-Menu__header{
+            margin-top: 4px;
+         }
+         &.controls-Menu__hide-menu-header .controls-Menu__itemsContainer {
+            padding-bottom: 4px;
+         }
+      }
+   }
+}
