Отступы есть на уровне additionalText2, в сумме с editAtPlace отступ с края получается слишком большой, на редактировании во вкладках убираю его
https://online.sbis.ru/debug/opendoc.html?guid=d1b8ab27-87f0-43cf-a9eb-a9f761e94cd5&des=
Ошибка в разработку 18.07.2017 Меняется ширина главной вкладки у ошибки, когда наводишь курсор на вкладку "Лента событий" Повторяет…

--- a/components/TabButton/TabButton.less
+++ b/components/TabButton/TabButton.less
@@ -190,6 +190,9 @@
             color: @black-color;
             font-size: @default-font-size;
          }
+         .controls-EditAtPlace__fieldWrapper{
+            padding: 0;
+         }
          .controls-TextBox {
             .controls-TextBox__fieldWrapper {
                padding-top: 1px;
