--- a/components/Spoiler/resources/MiddlePartTitleTemplate.tmpl
+++ b/components/Spoiler/resources/MiddlePartTitleTemplate.tmpl
@@ -1,4 +1,4 @@
 <span class="controls-Spoiler__title-caption js-controls-Spoiler__title-caption {{!caption ? ' controls-Spoiler__emptyCaption' : ''}}">
-   <span class="controls-Spoiler__title-caption-text">{{caption ? caption : '&nbsp;'}}</span>
+   <span class="controls-Spoiler__title-caption-text">{{(caption || '&nbsp;')|sanitize}}</span>
    <div class="controls-Spoiler__title-caption-blur line-overflow-blur"></div>
 </span>
