LongOperations: Экранирование спецсимволов

--- a/components/LongOperations/LongOperationsPopup/resources/headerTemplate.xhtml
+++ b/components/LongOperations/LongOperationsPopup/resources/headerTemplate.xhtml
@@ -7,7 +7,7 @@
             icon-size icon-24 icon-Alert icon-error
          {{?}}">
 </div>
-<div class="controls-NotificationPopup__header_caption controls-LongOperationsPopup__header_caption">{{=it.caption}}</div>
+<div class="controls-NotificationPopup__header_caption controls-LongOperationsPopup__header_caption">{{!it.caption}}</div>
 <component data-component="SBIS3.CONTROLS.Link" name="downloadButton" class="controls-LongOperationsPopup__header_downloadButton">
    <option name="caption">Скачать</option>
 </component>
