https://online.sbis.ru/opendoc.html?guid=67a0ab34-1f77-4d56-b303-ecb0a68ff274&des= Ошибка в разработку 13.07.2017 Задачи. При входе в реестры задач новым сотрудником нет записи о том, что у сотрудника нет задач. …

--- a/components/Mixins/CompositeViewMixin/CompositeViewMixin.tmpl
+++ b/components/Mixins/CompositeViewMixin/CompositeViewMixin.tmpl
@@ -29,7 +29,7 @@
       </tbody>
       <ws:partial template="{{_footTpl}}" scope="{{...}}" />
    </table>
-   <div class="controls-ListView__EmptyData ws-hidden">
+   <div class="controls-ListView__EmptyData {{(!_serverRender || _records.length) ? 'ws-hidden' : ''}}">
       <ws:partial template="{{ emptyHTML }}"/>
    </div>
    <ws:if data="{{ footerTpl }}">
