--- a/components/DatePicker/DatePicker.less
+++ b/components/DatePicker/DatePicker.less
@@ -32,3 +32,7 @@
       }
    }
 }
+.controls-DatePicker__timePicker-border.controls-FloatArea {
+   border: @float-area-border;
+   .box-shadow(@float-area-shadow);
+}
