--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -697,7 +697,7 @@
 @controls-filterButton-button-height:		3rem;
 @controls-filterButton-picker-bg:         #38495B;
 @controls-filterButton-picker-border-width:@default-border-width;
-@controls-Popup-closeButton-top:          1.75rem;
+@controls-Popup-closeButton-top:          8px;
 @controls-filterButton-button-margin:     0;
 @controls-filterButton-button-margin-right-align:.2857rem 0 .2857rem .2857rem;
 @controls-filterButton-button-margin-ff:  .5714rem 0 0 0;
@@ -924,6 +924,8 @@
 @time-header-title-margin-left:           .8571rem;
 @time-header-toggle-time-margin-left:     1.1428rem;
 @time-header-home-button-margin-left:     .2857rem;
+@time-header-margin:                      0;
+@time-header-offset-start-block:          0;
 @time-header-background-color:            @time-picker-background-color;
 @time-header-title-color:                 @innacent-color;
 //ToggleTime
