--- a/components/FilterButton/FilterButton.less
+++ b/components/FilterButton/FilterButton.less
@@ -91,3 +91,9 @@
       .order(-1);
    }
 }
+
+/* В FireFox'e есть баг для flex контейнеров, которые лежат в абослютном контейнере,
+   иногда могут неправильно рендериться блоки с align-items: center; */
+.ws-is-firefox .ws-sticky-header__header-container .controls__filterButton__filterLine-text {
+   padding-bottom: 1px;
+}
