https://online.sbis.ru/opendoc.html?guid=ce45b782-fbdd-44b7-b69b-eff1bcc05bf9&des= Ошибка в разработку 19.07.2017 iPad. Задачи - в форме создания папки задачи после кнопок с приоритетом большой отступ (см. скрин) К…

--- a/themes/online/variables.less
+++ b/themes/online/variables.less
@@ -526,7 +526,7 @@
 @radio-button-icon-disabled-checked-bg:         @radio-button-icon-bg;
 @radio-button-icon-disabled-checked-hover-bg:   @radio-button-icon-bg;
 
-@radio-button-icon-margin:                      8px 6px 0 6px;
+@radio-button-icon-margin:                      -1px 6px;
 @radio-button-icon-border-style:                solid;
 @radio-button-icon-border-color:                @gray-color;
 @radio-button-icon-border-color-checked:        @radio-button-hover-text-color;
