--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -169,7 +169,7 @@
 @radio-button-icon-height:                .928rem;
 @radio-button-icon-line-height:           normal;
 @radio-button-icon-bg:                    transparent;
-@radio-button-icon-margin:                0.3rem;
+@radio-button-icon-margin:                -1px 0.3rem;
 @radio-button-icon-border-color:          #2C4458;
 @radio-button-icon-border-color-checked:  @primary-color;
 @radio-button-hover-icon-border-color:    @primary-color;
