https://online.sbis.ru/opendoc.html?guid=ff865ddf-97cf-4a22-ac9e-99b5933b460e&des= Ошибка в разработку 03.07.2017 Редизайн. В ie некорректно отображаются чекбоксы 1. Любая тема, открыть смену 2. Перейти в продаж…

--- a/themes/mixins.less
+++ b/themes/mixins.less
@@ -519,7 +519,7 @@
       line-height: calc(~"@{size} + 1px");
     }
     // В IE, если значения css свойст в rem, то top расчитывается неправильно, поэтому ставим для IE другой.
-    body.ws-is-ie:not(.ws-is-ie12) & when not (@topIE = 0){
+    body.ws-is-ie:not(.ws-is-windows-10) & when not (@topIE = 0){
       top: @topIE;
     }
   }
