--- a/components/BreadCrumbs/resources/itemContentTpl.tmpl
+++ b/components/BreadCrumbs/resources/itemContentTpl.tmpl
@@ -1,3 +1,3 @@
 <span class="controls-BreadCrumbs__arrow icon-16 icon-size icon-DayForward icon-primary action-hover"></span>
 <span if="{{item.get('icon')}}" class="{{item.get('icon')}}"></span>
-<a class="controls-BreadCrumbs__title" style="{{decorators.apply(item.get('color'), 'color')}}">{{decorators.apply(item.get(displayProperty) || '')|sanitize}}</a>
+<a class="controls-BreadCrumbs__title" style="{{decorators.apply(item.get('color'), 'color')}}">{{decorators.apply(item.get(displayProperty) || '')}}</a>
