https://online.sbis.ru/opendoc.html?guid=135f19a7-abd9-4263-8ef0-f2ac0e35f4e4&des= Ошибка в разработку 18.07.2017 Редизайн. Розница Онлайн. Обрезанная ромашка в окне переноса записей в другой разделonline-inside_3.…

--- a/themes/carrynew/variables.less
+++ b/themes/carrynew/variables.less
@@ -155,6 +155,7 @@
 @controls-editInPlace-editor-bg:          #F5F5F5 !important;
 @list-view-loading-indicator-gradient-bg: url(@list-view-scroll-spritesheet)  no-repeat center;
 @list-view-loading-indicator-gradient-bg-up:url(@list-view-scroll-spritesheet)  no-repeat center;
+@list-view-scroll-bg:                           url('img/ajax-loader-indicator-big.gif') no-repeat center;
 // Tree view
 @tree-view-expand-color:                        @blue-dark-color;
 @tree-view-expand-hover-color:                  #0055BB;
