--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -581,7 +581,7 @@
 @list-view-actions-menu-close-width:      1.75rem;
 @listView-empty-data-color:               @disabled-color;
 @listView-empty-data-font-size:           1rem;
-@list-view-scroll-bg:                     url('img/ajax-loader-indicator-big.gif') @basic-block-bg-color 0.4642rem 0.4642rem  no-repeat;
+@list-view-scroll-bg:                     url('img/ajax-loader-indicator-big.gif') no-repeat center;
 @list-view-scroll-height:                 3.5714rem;
 @list-view-scroll-width:                  3.5714rem;
 @controls-AjaxLoader-indicator-padding-left:3.5714rem;
@@ -762,6 +762,7 @@
 @controls-Paging-btn-margin:              0 .2857rem 0 0;
 @controls-Paging-btn-padding:             .2857rem;
 @controls-Paging-padding:                 0;
+@controls-movedialog-min-height:          3.5714rem;
 //ScrollContainer
 @controls-ScrollContainer-top-gradient-height:0.857rem;
 //Scrollbar
