https://online.sbis.ru/opendoc.html?guid=15ffad55-162f-49df-bc10-44784e04ca49&des= Задача в разработку 04.07.2017 Написать юнит-тесты для системы фокусов по заданным кейсам…

--- a/tests/WSTest/Focus/Case13.tmpl
+++ b/tests/WSTest/Focus/Case13.tmpl
@@ -1,6 +1,10 @@
 <div>
-   <input class="a"/>
-</div>
-<div class="ws-window-titlebar-custom ws-window-titlebar">
-   <input class="b"/>
+   <div class="ws-window-titlebar-custom ws-window-titlebar">
+      <ws:SBIS3.CONTROLS.TextBox name="TextBox1"/>
+      <ws:SBIS3.CONTROLS.TextBox name="TextBox2"/>
+   </div>
+   <div>
+      <ws:SBIS3.CONTROLS.TextBox name="TextBox3"/>
+      <ws:SBIS3.CONTROLS.TextBox name="TextBox4"/>
+   </div>
 </div>
