DateRangeSlider: Поправил обводку на невалидном контроле
https://online.sbis.ru/opendoc.html?guid=921eb144-05aa-48dc-87eb-adfeee91a92e&des=
Ошибка в разработку 29.06.2017 Новая моя страница. Валидация на поле даты начала работы сдвигает соседние поля. Новая моя страниц…

--- a/components/DateRangeSliderBase/DateRangeSliderBase.less
+++ b/components/DateRangeSliderBase/DateRangeSliderBase.less
@@ -101,9 +101,10 @@
    }
 
    &.ws-validation-error {
-      border-width: @date-range-slider-error-border-width;
-      border-style: @date-range-slider-error-border-style;
-      border-color: @date-range-slider-error-border-color;
+      outline-offset: -@date-range-slider-error-border-width;
+      outline-width: @date-range-slider-error-border-width;
+      outline-style: @date-range-slider-error-border-style;
+      outline-color: @date-range-slider-error-border-color;
       background: @date-range-slider-error-bg;
    }
 }
