https://online.sbis.ru/opendoc.html?guid=57d309ea-487e-4a28-823a-5b9bd25ecf22&des= Ошибка в разработку 20.07.2017 Кадровый учет. Не работает скролл в кадровом документе. wisnap1/Devyatka9 1. Сотрудники - кадро…

--- a/components/Mixins/CompositeViewMixin/resources/CompositeItemsTemplate.tmpl
+++ b/components/Mixins/CompositeViewMixin/resources/CompositeItemsTemplate.tmpl
@@ -1,4 +1,4 @@
-<div class="controls-CompositeView__foldersContainer">{{debug()}}</div>
+<div class="controls-CompositeView__foldersContainer"></div>
 <ws:if data="{{tplData.viewMode === 'list' || tplData.viewMode === 'tile'}}">
    <ws:partial
       template="{{tplData._itemsTemplate}}"
