+ emptyValue в ddl https://online.sbis.ru/opendoc.html?guid=df697fff-da09-4338-97c9-a20ca9c16970&des= Ошибка в разработку 20.07.2017 Необходимо сделать проброс emptyValue из FastDataFilter на dropDown. …

--- a/components/FastDataFilter/ItemTpl.tmpl
+++ b/components/FastDataFilter/ItemTpl.tmpl
@@ -4,6 +4,7 @@
                                 items="{{item.values}}"
                                 idProperty="{{item.idProperty || item.keyField}}"
                                 multiselect="{{item.multiselect || false}}"
+                                emptyValue="{{item.emptyValue || false}}"
                                 displayProperty="{{item.displayProperty || item.displayField}}"
                                 parentProperty="{{item.parentProperty || item.hierField}}"
                                 className="{{'controls-ListView__item ' + item.className}}"
