https://online.sbis.ru/opendoc.html?guid=d6f081e7-27d0-40b5-a243-dcb89736db3d&des= Ошибка в разработку 13.07.2017 У панели InformationPopupManager не предусмотрено исключение слипания кнопок при переходе подтвержда…

--- a/components/SubmitPopup/SubmitPopup.less
+++ b/components/SubmitPopup/SubmitPopup.less
@@ -48,8 +48,8 @@
 }
 
 .controls-SubmitPopup__buttonContainer {
-   text-align: center;
-   font-size: 0; /* для того, чтобы убрать расстояние между кнопками, которые inline-block-и */
+   .flexbox();
+   .justify-content(center);
 }
 
 .controls-SubmitPopup__button.controls-Button, .controls-SubmitPopup__button.controls-Link {
