--- a/components/SubmitPopup/resources/template.xhtml
+++ b/components/SubmitPopup/resources/template.xhtml
@@ -9,24 +9,28 @@
    <div class="controls-SubmitPopup__footer">
       <div class="controls-SubmitPopup__buttonContainer">
          {{? it.status === 'confirm' || it.useConfirmButtons}}
-         <component data-component="{{? it.positiveButton.isLink}}SBIS3.CONTROLS.Link{{??}}SBIS3.CONTROLS.Button{{?}}" name="positiveButton" class="controls-SubmitPopup__button {{? it.hasCancelButton}}controls-SubmitPopup__button-mini{{?}}">
+         <component data-component="{{? it.positiveButton.isLink}}SBIS3.CONTROLS.Link{{??}}SBIS3.CONTROLS.Button{{?}}" name="positiveButton" class="controls-SubmitPopup__button {{? it.hasCancelButton}}controls-SubmitPopup__button-mini{{?}} controls-Button__ellipsis">
             <option name="caption">{{=it.positiveButton.caption}}</option>
+            <option name="tooltip">{{=it.positiveButton.caption}}</option>
             <option name="allowChangeEnable">false</option>
             <option name="primary">true</option>
          </component>
-         <component data-component="{{? it.negativeButton.isLink}}SBIS3.CONTROLS.Link{{??}}SBIS3.CONTROLS.Button{{?}}" name="negativeButton" class="controls-SubmitPopup__button {{? it.hasCancelButton}}controls-SubmitPopup__button-mini{{?}}">
+         <component data-component="{{? it.negativeButton.isLink}}SBIS3.CONTROLS.Link{{??}}SBIS3.CONTROLS.Button{{?}}" name="negativeButton" class="controls-SubmitPopup__button {{? it.hasCancelButton}}controls-SubmitPopup__button-mini{{?}} controls-Button__ellipsis">
             <option name="caption">{{=it.negativeButton.caption}}</option>
+            <option name="tooltip">{{=it.negativeButton.caption}}</option>
             <option name="allowChangeEnable">false</option>
          </component>
          {{? it.hasCancelButton}}
-         <component data-component="{{? it.cancelButton.isLink}}SBIS3.CONTROLS.Link{{??}}SBIS3.CONTROLS.Button{{?}}" name="cancelButton" class="controls-SubmitPopup__button controls-SubmitPopup__button-mini">
+         <component data-component="{{? it.cancelButton.isLink}}SBIS3.CONTROLS.Link{{??}}SBIS3.CONTROLS.Button{{?}}" name="cancelButton" class="controls-SubmitPopup__button controls-SubmitPopup__button-mini controls-Button__ellipsis">
             <option name="caption">{{=it.cancelButton.caption}}</option>
+            <option name="tooltip">{{=it.cancelButton.caption}}</option>
             <option name="allowChangeEnable">false</option>
          </component>
          {{?}}
          {{??}}
-         <component data-component="{{? it.submitButton.isLink}}SBIS3.CONTROLS.Link{{??}}SBIS3.CONTROLS.Button{{?}}" name="okButton" class="controls-SubmitPopup__button">
+         <component data-component="{{? it.submitButton.isLink}}SBIS3.CONTROLS.Link{{??}}SBIS3.CONTROLS.Button{{?}}" name="okButton" class="controls-SubmitPopup__button controls-Button__ellipsis">
             <option name="caption">{{=it.submitButton.caption}}</option>
+            <option name="tooltip">{{=it.submitButton.caption}}</option>
             <option name="allowChangeEnable">false</option>
             <option name="primary">true</option>
          </component>
