DateRange: правки тем розницы и престо.
https://online.sbis.ru/opendoc.html?guid=2b6ca472-a313-44fa-aa44-40585585f1c9&des=
Ошибка в разработку 10.07.2017 Розница редизайн, поля ввода, большая тема Отступ от края до текста некорректный - ОР: 16px, ФР: 12.…

--- a/themes/prestonew/theme.less
+++ b/themes/prestonew/theme.less
@@ -293,9 +293,6 @@ body {
          }
       }
    }
-   .controls-DateBox {
-      min-height: 3rem;
-   }
   .controls-ToolBar__menuIcon .icon-24 {
     font-family: carrypresto-icons!important;
   }
@@ -647,11 +644,17 @@ body {
 
 .controls-DateBox.controls-FormattedTextBox {
    .controls-FormattedTextBox__fieldWrapper {
-      padding: 0 0.3rem;
       .controls-FormattedTextBox__field {
          height: 2.86rem;
       }
    }
+}
+
+// В теме онлайна кнопка выравнивается маргинами. Но в темах престы и розницы размер иконки другой и из-за них
+// появляются лишние отступы внизу контрола. Обнуляем маргины и меняем vertical-align у кнопки.
+// Если везде все будет хорошо, то в онлайне сделать подобным образом. Возможно проще сделать через flex.
+.controls-DateRange .controls-DateRange__Button {
+   vertical-align: top;
 }
 .controls-FormattedTextBox .controls-FormattedTextBox__fieldWrapper .controls-FormattedTextBox__field .controls-FormattedTextBox__field-symbol {
 
